# C-ML

./: .clang-format  .gitignore  .pre-commit-config.yaml  404.html  CMakeLists.txt  COMMIT_GROUPS.md  CONTRIBUTING.md  DesignGuide.md  Makefile  QUICKSTART.md  README.md  build.bat  build.ps1  build.sh  index.html  main.c  mkdocs.yml  requirements.txt
.github/: FUNDING.yml
.github/workflows/: ci.yml  deploy-website.yml
DesignGuide/: index.html
EXTERNAL_DEPENDENCIES/: index.html
api_reference/: index.html
autograd/: index.html
benchmarks/: bench_all.py  bench_all_devices.py  bench_cross_framework.c  bench_quick.py  index.html  profile_mlp_conv.c  profile_overhead.c  profile_overhead_detailed.c  profile_train_conv.c
cmake/: CMLConfig.cmake.in  cml.pc.in  lsan_suppressions.txt
contributing/: index.html
datasets/: index.html
development_guidelines/: index.html
docs/: AUTOGRAD.md  AUTOGRAD_IMPLEMENTATION.md  DesignGuide.md  EXTERNAL_DEPENDENCIES.md  IMPLEMENTATION_STATUS.md  INDEX.md  INTEGRATION_SUMMARY.md  LAYERS_COMPLETE.md  MLIR_INTEGRATION_PLAN.md  MLIR_STATUS.md  NN_LAYERS.md  README.md  TODO_IMPLEMENTATIONS.md  TRAINING.md  advanced_nn.md  api_reference.md  autograd.md  beam_search.md  benchmarks.md  compiler_pipeline.md  contributing.md  datasets.md  development_guidelines.md  distributed.md  examples.md  extra.css  features.md  getting_started.md  gpu_backends.md  graph_mode.md  index.md  installation.md  ir_graph_management.md  kernel_studio.md  kernel_studio_quickref.md  license.md  linearization.md  logo-switcher.js  memory_management.md  miscellaneous.md  (+8 more)
docs/mlir/: ADVANCED_FEATURES.md  BUILDING_WITH_MLIR.md  PHASE1_STATUS.md  QUICK_ANSWER.md  README.md
docs/modules/: activations.md  core.md  layers.md  loss_functions.md  metrics.md  optimizers.md  preprocessing.md  regularizers.md
examples/: README.md  autograd_example.c  bench_forward.c  bench_gemm.c  comprehensive_fusion_example.c  early_stopping_lr_scheduler.c  export_graph.c  llama_inference.c  mlir_lowering_poc.c  mnist_example.c  nn_training_example.c  opcheck.c  or_gate.c  print_kernels.c  simple_xor.c  test.c  training_loop_example.c  unified_api_example.c
examples/benchmarks/: bench_forward.c  bench_gemm.c
examples/demos/: auto_capture_example.c  autograd_example.c  bert.c  clip.c  comprehensive_fusion_example.c  convnext.c  dead_code_example.c  early_stopping_lr_scheduler.c  efficientnet.c  export_graph.c  gpt2.c  inception.c  mask_rcnn.c  mnist_example.c  print_kernels.c  resnet.c  retinanet.c  rnnt.c  stable_diffusion.c  t5.c  training_loop_example.c  unet.c  unet3d.c  vit.c  whisper.c  yolov8.c
examples/mlperf/: mlperf_resnet50.c
examples/tutorials/: activations.c  autoencoder.c  conv_net.c  embedding.c  ex01_tensor_ops.c  ex02_linear_regression.c  ex03_logistic_regression.c  ex04_mlp_classifier.c  ex05_autoencoder.c  ex06_conv_net.c  ex07_rnn_sequence.c  ex08_lstm_timeseries.c  ex09_gru_classifier.c  ex10_embedding.c  ex11_gan.c  ex12_multi_task.c  ex13_transformer.c  ex14_lr_scheduler.c  ex15_activations_showcase.c  gan.c  gru_classifier.c  hello_cml.c  linear_regression.c  logistic_regression.c  lr_scheduler.c  lstm_timeseries.c  mlp_classifier.c  multi_task.c  rnn_sequence.c  simple_xor.c  tensor_ops.c  transformer.c
features/: index.html
getting_started/: index.html
graph_mode/: index.html
include/: cml.h  nn.h  optim.h  torch_compat.h
include/Activations/: elu.h  gelu.h  leaky_relu.h  linear.h  relu.h  sigmoid.h  softmax.h  tanh.h
include/Core/: augmentation.h  autograd.h  cleanup.h  dataset.h  device.h  error_codes.h  error_stack.h  logging.h  memory_management.h  model_architecture.h  profiling.h  raii.h  training.h  training_metrics.h
installation/: index.html
ir_graph_management/: index.html
kernel_studio/: index.html
kernel_studio_quickref/: index.html
license/: index.html
new_docs/: API_GUIDE.md  ARCHITECTURE.md  COMPILATION.md  OVERVIEW.md  PYTHON_BINDINGS.md  QUICK_START.md  README.md  RUNNING.md
nn_layers/: index.html
optimizations/: index.html
python/: CFFI_DEVELOPMENT.md  EASY_API_GUIDE.md  INSTALLATION.md  README.md  build.py  pyproject.toml  setup.py  test_cffi_complete.py
python/cml/: __init__.py  __init__.pyi  _cml_cffi.py  autograd.py  build_cffi.py  core.py  data.py  distributed.py  functional.py  losses.py  nn.py  optim.py  py.typed  simple_api.py  tensor.py  tensor_ops.py  utils.py  zoo.py
python/cml/viz/: __init__.py  server.py
python/cml/viz/static/: index.html
python/examples/: 01_hello_cml.py  02_neural_network.py  03_classification.py  04_convolution.py  05_easy_api.py  classification.py  convolution.py  easy_api.py  hello_cml.py  neural_network.py
python/tests/: test_zoo.py
scripts/: README.md  check-main-branch.sh  fastapi_server.py  process_replay.sh  setup_env.bat  setup_env.ps1  setup_env.sh  viz.py
search/: search_index.json
src/: cml.c  main.c  my_functions.h  nn.c  optim.c  tensor.c  tensor_manipulation.c  tensor_views.c
testing/: index.html
tests/: bench_backends.c  conftest.py  grad_check.c  opcheck.c  test_activations.py  test_am_driver.c  test_amd_profiling.c  test_autograd.c  test_backends.c  test_beam_search.c  test_compiler_features.c  test_convergence.c  test_cross_boundary_fusion.c  test_cuda_graph_replay.c  test_disk_backend.c  test_disk_cache.c  test_dispatch.c  test_distributed.c  test_edge_cases.c  test_elementwise.py  test_fp8_fnuz.c  test_fused_codegen.c  test_fusion_schedule.c  test_fusion_scheduler.c  test_fuzzer_ops.c  test_gguf_quant.c  test_gpu_codegen.c  test_gqa_flash.c  test_grad_check.c  test_graph_cache_integration.c  test_graph_capture.c  test_hcq.c  test_heuristic_opt.c  test_hevc.c  test_hexagon_sim.c  test_hw_support.c  test_ib_transport.c  test_image_dtype.c  test_intern.c  test_kernel_cache.c  (+65 more)
training/: index.html
usage/: index.html
viz/: fetch_assets.sh  index.html  serve.py  viz-charts.js  viz.css  viz.js  worker.js
viz-ui/: index.html  package.json  vite.config.js
website/: index.html  package-lock.json  package.json  vite.config.js
(+744 files in other folders)
